[sc-3539] new entity annotation flow (#534)
* Add paragraph annotation skeleton + some fixes and improvements

  - Fix nav section active state management in edit-resource.component.ts
  - Rename `ParagraphWithTextAndAnnotations` to `ParagraphWithTextAndClassifications`
  - Add common `ParagraphWithText` interface and `getParagraphs` function in helpers

* Display paragraphs and placeholder for entity families

  - Update edit-resource CSS so entity families don't overlap the text on "smaller" screens (below 1440px)
  - Use $padding-top-page-container in page content height calculation

* Display entity families in accordion panel

* Highlight entities in text

  - grey by default
  - highlight with family color on family selection
  - when no family is selected:
    - clicking on any entity display a toast explaining family selection is required
    - hovering entity display its family name in a native tooltip
  - when family is selected:
    - clicking on entity from selected family display only delete button
    - clicking on entity from other families display both delete and change button
    - selecting text on the paragraph display only confirm button

* Fix entity family colors

  - Remove duplication of entity family colors
  - add missing colors in `GROUP_COLORS` and sort them alphabetically
  - rename `GROUP_COLORS` from `entities/models` into `generatedEntitiesColor`
  - use common `generatedEntitiesColor` in all dashboard
  - Update family colors so all entities are readable when highlighted

* Fix highlight of user annotations

 - User annotation were added to all paragraphs instead of being filtered by paragraph
 - Add `cancelled_by_user` for TokenAnnotation in SDK-core
 - Don't display `cancelled_by_user` annotations in paragraphs

* Update and delete generated annotations

* Fix unit tests

* Update pastanaga in missdev

* Increase contrast between WORK_OF_ART color and unselected grey

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -436,6 +436,7 @@
 	"resource.entities.loc": "Geografia",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Diners",
+	"resource.entities.no-entity": "Encara no hi ha cap anotació",
 	"resource.entities.norp": "Nacionalitats",
 	"resource.entities.org": "Organitzacions",
 	"resource.entities.percent": "Percentatge",
@@ -446,6 +447,8 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
+	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
+	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
 	"resource.field-classification": "Classificació de paràgrafs",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
@@ -488,6 +491,7 @@
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
+	"resource.tooltip.annotation": "Anotació",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.edition": "Edició",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
