--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -482,6 +482,7 @@
 	"resource.entities.loc": "Geography",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Money",
+	"resource.entities.no-entity": "No annotation yet",
 	"resource.entities.norp": "Nationalities",
 	"resource.entities.org": "Organizations",
 	"resource.entities.percent": "Percentage",
@@ -492,6 +493,8 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
+	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
+	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification": "Paragraphs classification",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
@@ -536,6 +539,7 @@
 	"resource.title": "Resource title",
 	"resource.toast.save-successful": "",
 	"resource.tooltip.add-field": "Add a field",
+	"resource.tooltip.annotation": "Annotation",
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.edition": "Edition",
 	"resource.visible_columns_dropdown": "Columns displayed",
