--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -436,6 +436,7 @@
 	"resource.entities.loc": "Geografía",
 	"resource.entities.mail": "Emails",
 	"resource.entities.money": "Dinero",
+	"resource.entities.no-entity": "Sin anotación todavía",
 	"resource.entities.norp": "Nacionalidades",
 	"resource.entities.org": "Organizaciones",
 	"resource.entities.percent": "Porcentaje",
@@ -446,6 +447,8 @@
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
+	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
+	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
 	"resource.field-classification": "Clasificación de párrafos",
 	"resource.field-file": "Campo de Archivo",
 	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
@@ -488,6 +491,7 @@
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
 	"resource.tooltip.add-field": "Agregar un campo",
+	"resource.tooltip.annotation": "Anotación",
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.edition": "Edición",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
