Fix typos in translations

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -635,10 +635,10 @@
 	"stash.settings.processes.classifier.info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
 	"stash.settings.processes.ner": "Named Entities Recognition training",
 	"stash.settings.processes.ner.info": "In order to recognize your custom entities automatically, existing content has to be annotated with your custom entities. As more content is annotated, training will improve. You can create new custom entities from the Insights page.",
-	"stash.settings.processes.paragraph_labeler": " Automatic paragraphs label training",
-	"stash.settings.processes.paragraph_labeler.info": "In order to label paragraphs automatically, existing paragraphs has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
-	"stash.settings.processes.resource_labeler": " Automatic resource label training",
-	"stash.settings.processes.resource_labeler.info": "In order to label resources automatically, existing resources has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
+	"stash.settings.processes.paragraph_labeler": "Automatic paragraphs label training",
+	"stash.settings.processes.paragraph_labeler.info": "In order to label paragraphs automatically, existing paragraphs have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
+	"stash.settings.processes.resource_labeler": "Automatic resource label training",
+	"stash.settings.processes.resource_labeler.info": "In order to label resources automatically, existing resources have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
