--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -464,6 +464,9 @@
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
 	"resource.classification": "Resource classification",
+	"resource.classification-page-link": "Classification page",
+	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
+	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.created": "Created",
 	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
