--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -418,6 +418,9 @@
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
 	"resource.classification": "Clasificación de recursos",
+	"resource.classification-page-link": "página de Clasificación",
+	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
+	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.created": "Data de creación",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
