Fix typo in training tasks names + disable full section while training

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -576,10 +576,10 @@
 	"stash.settings.processes.classifier.info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
 	"stash.settings.processes.ner": "Formació de reconeixement d'entitats anomenades",
 	"stash.settings.processes.ner.info": "Per reconèixer les vostres entitats personalitzades automàticament, el contingut existent s'ha d'anotar amb les vostres entitats personalitzades. A mesura que s'anoti més contingut, la formació millorarà. Podeu crear noves entitats personalitzades des de la pàgina Estadístiques.",
-	"stash.settings.processes.paragraph_labeler": "Formació automàtica d'etiquetes de paràgrafs",
-	"stash.settings.processes.paragraph_labeler.info": "Per etiquetar els paràgrafs automàticament, s'han d'etiquetar els paràgrafs existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
-	"stash.settings.processes.resource_labeler": "Formació automàtica d'etiquetes de recursos",
-	"stash.settings.processes.resource_labeler.info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.paragraph-labeler": "Formació automàtica d'etiquetes de paràgrafs",
+	"stash.settings.processes.paragraph-labeler.info": "Per etiquetar els paràgrafs automàticament, s'han d'etiquetar els paràgrafs existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.resource-labeler": "Formació automàtica d'etiquetes de recursos",
+	"stash.settings.processes.resource-labeler.info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
 	"stash.settings.processes.training.active": "Hi ha un entrenament actiu que pots aturar en qualsevol moment. Rebràs un correu electrònic quan estigui complet.",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
 	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
