--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -576,10 +576,10 @@
 	"stash.settings.processes.classifier.info": "Para obtener sugerencias precisas de búsqueda de etiquetas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
 	"stash.settings.processes.ner": "Capacitación en reconocimiento de entidades nombradas",
 	"stash.settings.processes.ner.info": "Para reconocer sus entidades personalizadas automáticamente, el contenido existente debe anotarse con sus entidades personalizadas. A medida que se anota más contenido, la capacitación mejorará. Puede crear nuevas entidades personalizadas desde la página Insights.",
-	"stash.settings.processes.paragraph_labeler": "Entrenamiento automático de etiquetas de párrafo",
-	"stash.settings.processes.paragraph_labeler.info": "Para etiquetar párrafos automáticamente, los párrafos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
-	"stash.settings.processes.resource_labeler": "Entrenamiento automático de etiquetas de recursos",
-	"stash.settings.processes.resource_labeler.info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.paragraph-labeler": "Entrenamiento automático de etiquetas de párrafo",
+	"stash.settings.processes.paragraph-labeler.info": "Para etiquetar párrafos automáticamente, los párrafos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
+	"stash.settings.processes.resource-labeler": "Entrenamiento automático de etiquetas de recursos",
+	"stash.settings.processes.resource-labeler.info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
 	"stash.settings.processes.training.active": "Hay un entrenamiento activo que puedes detener en cualquier momento. Recibirás un correo electrónico cuando esté completo.",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
