Add job title in onboarding

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -355,6 +355,7 @@
 	"onboarding.industry.telecommunications": "Telecomunicacions",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
+	"onboarding.job-title": "Títol de treball",
 	"onboarding.kb_creation": "Creació d'emmagatzematge...",
 	"onboarding.phone": "Número de telèfon",
 	"onboarding.phone.invalid_code": "Codi invàlid",
