--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -355,6 +355,7 @@
 	"onboarding.industry.telecommunications": "Telecomunicaciones",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
+	"onboarding.job-title": "Título profesional",
 	"onboarding.kb_creation": "Creación de almacenamiento…",
 	"onboarding.phone": "Número de teléfono",
 	"onboarding.phone.invalid_code": "Codigo invalido",
