Fix error view on resource list
 - Display only resources processed at least once on processed page, even if processing failed or if processing is happening again
 - On processing and failure views, filter resources by status
 - Fix Classification column title

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -465,6 +465,7 @@
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
 	"resource.classification": "Resource classification",
+	"resource.classification-column": "Classification",
 	"resource.classification-page-link": "Classification page",
 	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
