--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -419,6 +419,7 @@
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
 	"resource.classification": "Classificació de recursos",
+	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
