[sc-3370] Reprocess and delete all from failed view
- Add a button allowing to select all (not just resources visible on the page) on failure view
- Add a button allowing to reprocess several resources at once
- Add progress indicator for bulk actions

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -184,6 +184,7 @@
 	"generic.by_relevance": "by relevance ",
 	"generic.cancel": "Cancel",
 	"generic.clean": "Clean",
+	"generic.clear-selection": "Clear selection",
 	"generic.clear_all": "Clear All",
 	"generic.close": "Close",
 	"generic.color": "Color",
@@ -198,6 +199,7 @@
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Date",
 	"generic.delete": "Delete",
+	"generic.deleting": "Deleting",
 	"generic.description": "Description",
 	"generic.deselect_all": "clear all",
 	"generic.disabled": "Disabled",
@@ -240,6 +242,8 @@
 	"generic.previous": "Previous page",
 	"generic.profile": "Profile",
 	"generic.reindex": "Resubmit file",
+	"generic.reindex-plural": "Resubmit files",
+	"generic.reindexing": "Resubmitting files",
 	"generic.relevance": "Relevance",
 	"generic.report_bug": "Report a bug",
 	"generic.reset": "Reset",
@@ -519,11 +523,13 @@
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
+	"resource.reindex-all-info": "Reprocessing all resources in error started. This may take some time.",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.resources": "Resources",
 	"resource.save-successful": "Resource saved",
 	"resource.search.in-resource": "in resource",
 	"resource.search.in-title": "in title",
+	"resource.select-all-failures": "Select all {{count}} resources in error",
 	"resource.selected_count": "{{num}} files selected",
 	"resource.status": "Status",
 	"resource.status-help.failed": "Files failing to be processed",
@@ -542,7 +548,6 @@
 	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.title": "Resource title",
-	"resource.toast.save-successful": "",
 	"resource.tooltip.add-field": "Add a field",
 	"resource.tooltip.annotation": "Annotation",
 	"resource.tooltip.classification": "Classification",
