--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -147,6 +147,7 @@
 	"generic.by_relevance": "per rellevància",
 	"generic.cancel": "Cancel·lar",
 	"generic.clean": "Netejar",
+	"generic.clear-selection": "Neteja la selecció",
 	"generic.clear_all": "Esborrar tot",
 	"generic.close": "Tancar",
 	"generic.color": "Color",
@@ -161,6 +162,7 @@
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Data",
 	"generic.delete": "Esborrar",
+	"generic.deleting": "S'està suprimint",
 	"generic.description": "Descripció",
 	"generic.deselect_all": "desseleccionar-ho tot",
 	"generic.download": "Descarregar",
@@ -200,6 +202,8 @@
 	"generic.previous": "Pàgina anterior",
 	"generic.profile": "Perfil",
 	"generic.reindex": "Enviar a re-entendre el fitxer",
+	"generic.reindex-plural": "Enviar a re-entendre els fitxers",
+	"generic.reindexing": "Tornant a enviar fitxers",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Llistat de recursos",
@@ -473,11 +477,13 @@
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
+	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "S'ha guardat el recurs",
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
+	"resource.select-all-failures": "Seleccioneu tots els {{count}} recursos per error",
 	"resource.selected_count": "{{num}} arxius seleccionats",
 	"resource.status": "Estat",
 	"resource.status-help.failed": "Els fitxers no es poden processar",
