--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -147,6 +147,7 @@
 	"generic.by_relevance": "por relevancia",
 	"generic.cancel": "Cancelar",
 	"generic.clean": "Limpiar",
+	"generic.clear-selection": "Selección clara",
 	"generic.clear_all": "Borrar todo",
 	"generic.close": "Cerrar",
 	"generic.color": "Color",
@@ -161,6 +162,7 @@
 	"generic.dashboard": "Dashboard",
 	"generic.date": "Fecha",
 	"generic.delete": "Borrar",
+	"generic.deleting": "Borrando",
 	"generic.description": "Descripción",
 	"generic.deselect_all": "deseleccionar todo",
 	"generic.download": "Descargar",
@@ -200,6 +202,8 @@
 	"generic.previous": "Página anterior",
 	"generic.profile": "Perfil",
 	"generic.reindex": "Enviar a re-entender el fichero",
+	"generic.reindex-plural": "Enviar a re-entender los ficheros",
+	"generic.reindexing": "Reenviar archivos",
 	"generic.relevance": "Relevancia",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Listado de recursos",
@@ -473,11 +477,13 @@
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
+	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "Recurso guardado",
 	"resource.search.in-resource": "en recurso",
 	"resource.search.in-title": "en el titulo",
+	"resource.select-all-failures": "Seleccionar todos los {{count}} recursos por error",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
 	"resource.status": "Estado",
 	"resource.status-help.failed": "Archivos que no se pueden procesar",
