[sc-3591] Implement training logs

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -223,6 +223,7 @@
 	"generic.suggestions": "Suggeriments",
 	"generic.switch_account": "Canviar de compte",
 	"generic.tags": "Etiquetes",
+	"generic.time": "Temps",
 	"generic.title": "Títol",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenllaçar",
@@ -590,6 +591,7 @@
 	"stash.settings.processes.resource-labeler.info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
 	"stash.settings.processes.training.active": "Hi ha un entrenament actiu que pots aturar en qualsevol moment. Rebràs un correu electrònic quan estigui complet.",
 	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
+	"stash.settings.processes.training.consult-history": "Consulta totes les dades i l'estat dels entrenaments realitzats o en curs",
 	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
 	"stash.settings.processes.training.no-resources": "Els entrenaments no estan disponibles en les caixes de coneixement buides.",
 	"stash.settings.processes.training.not-allowed": "Els entrenaments no estan disponibles en els comptes bàsics.",
@@ -671,6 +673,12 @@
 	"stats.total.title": "Recursos",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
+	"training.history": "Historial d'entrenaments",
+	"training.status": "Estat",
+	"training.status.failed": "Error",
+	"training.status.stopped": "Cancel·lat",
+	"training.status.succeeded": "Completado con éxito",
+	"training.training": "Entrenament",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
 	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 3 columnes: <code>Títol, Cos, Format</code>",
