--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -264,6 +264,7 @@
 	"generic.suggestions": "Suggestions",
 	"generic.switch_account": "Switch account",
 	"generic.tags": "Tags",
+	"generic.time": "Time",
 	"generic.title": "Title",
 	"generic.uid": "UID",
 	"generic.unlink": "Unlink",
@@ -651,6 +652,7 @@
 	"stash.settings.processes.resource-labeler.info": "In order to label resources automatically, existing resources have to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page.",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
+	"stash.settings.processes.training.consult-history": "Consult all the data and the status of the trainings completed or in progress",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.no-resources": "The training feature is not available on empty knowledge boxes.",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
@@ -742,6 +744,12 @@
 	"toast.information": "Information",
 	"toast.success": "Success",
 	"toast.warning": "Warning",
+	"training.history": "Training history",
+	"training.status": "Status",
+	"training.status.failed": "Error",
+	"training.status.stopped": "Canceled",
+	"training.status.succeeded": "Completed successfully",
+	"training.training": "Training",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
 	"upload.csv_description": "Create multiple resources by selecting a CSV file with 3 columns: <code>Title, Body, Format</code>",
