--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -223,6 +223,7 @@
 	"generic.suggestions": "Sugerencias",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.tags": "Etiquetas",
+	"generic.time": "Tiempo",
 	"generic.title": "Título",
 	"generic.uid": "UID",
 	"generic.unlink": "Desenlazar",
@@ -590,6 +591,7 @@
 	"stash.settings.processes.resource-labeler.info": "Para etiquetar recursos automáticamente, los recursos existentes deben etiquetarse. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
 	"stash.settings.processes.training.active": "Hay un entrenamiento activo que puedes detener en cualquier momento. Recibirás un correo electrónico cuando esté completo.",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
+	"stash.settings.processes.training.consult-history": "Consulta todos los datos y el estado de los entrenamientos realizados o en curso",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
 	"stash.settings.processes.training.no-resources": "Los entrenamientos no están disponibles en cajas de conocimiento vacías.",
 	"stash.settings.processes.training.not-allowed": "Los entrenamientos no están disponibles en las cuentas básicas.",
@@ -671,6 +673,12 @@
 	"stats.total.title": "Recursos",
 	"tasks.credits.title": "Ciclos disponibles",
 	"tasks.credits.upgrade": "Adquirir más ciclos",
+	"training.history": "Historial de entrenamientos",
+	"training.status": "Estado",
+	"training.status.failed": "Error",
+	"training.status.stopped": "Cancelado",
+	"training.status.succeeded": "Completat amb èxit",
+	"training.training": "Entrenamiento",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
 	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 3 columnas: <code>Título, Cuerpo, Formato</code>",
