New label set management pages
  - new label set list layout with expander instead of side panel
    - button to edit/delete directly from the label set list
    - list of labels displayed when expander is expanded
  - label set addition/edition form:
    - improved label list UX
    - enable "multiple" checkbox
    - better form validation

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -191,7 +191,6 @@
 	"generic.no_results_for": "No s'han trobat resultats per",
 	"generic.nuclia_db": "Nuclia DB",
 	"generic.of": "de",
-	"generic.ontologies": "Etiquetes",
 	"generic.or": "O",
 	"generic.origin": "Origen",
 	"generic.owner": "Owner",
@@ -237,6 +236,27 @@
 	"generic.zone": "Zona de processament",
 	"generic.zone_and_provider": "Zona i proveïdor de processament",
 	"input.placeholder": "La teva cerca",
+	"label-set.add": "Afegeix conjunt d'etiquetes",
+	"label-set.add-button": "Afegir nou",
+	"label-set.delete": "Suprimeix el conjunt d'etiquetes",
+	"label-set.delete.confirm-description": "Si suprimiu el conjunt d'etiquetes, també se suprimiran totes les seves etiquetes. No podeu desfer aquesta acció. També pot afectar les formacions en curs i els suggeriments generats.",
+	"label-set.delete.confirm-title": "Esteu segur que voleu suprimir el conjunt d'etiquetes \"{{labelset}}\"?",
+	"label-set.edit": "Edita el conjunt d'etiquetes",
+	"label-set.form.exclusive": "Etiqueta exclusiva",
+	"label-set.form.exclusive-checkbox": "Afegiu només una etiqueta per conjunt d'etiquetes",
+	"label-set.form.exclusive-description": "Per defecte, un recurs/paràgraf pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
+	"label-set.form.kind": "Tipus de classificació",
+	"label-set.form.kind-warning": "Aquesta propietat no es pot modificar després.",
+	"label-set.form.labels": "Etiquetes",
+	"label-set.form.labels-description": "Creeu i ordeneu les etiquetes que formen part d'aquest conjunt d'etiquetes.",
+	"label-set.form.labels.naming-constraint": "No es permeten claudàtors",
+	"label-set.form.name": "Nom del conjunt d'etiquetes",
+	"label-set.form.name-invalid": "El nom del conjunt d'etiquetes no és vàlid",
+	"label-set.form.name-required": "El nom del conjunt d'etiquetes és obligatori",
+	"label-set.paragraphs": "Paràgrafs",
+	"label-set.resources": "Recursos",
+	"label-set.subtitle": "Exploreu i editeu conjunts d'etiquetes",
+	"label-set.title": "Conjunts d'etiquetes",
 	"language.ca": "Català",
 	"language.cs": "Txec",
 	"language.da": "Danès",
@@ -373,27 +393,6 @@
 	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.title": "👋​ Benvinguts a Nuclia!",
 	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
-	"ontology.add_ontology": "Afegir etiquetes",
-	"ontology.customize_classification": "Personalitza la classificació.",
-	"ontology.delete_confirm_title": "Eliminar la classificació?",
-	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
-	"ontology.delete_warning_extra": "Si suprimeixes aquesta classificació, desapareixerà de tots els recursos i suggeriments de cerca",
-	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom \"{{title}}\"",
-	"ontology.excluding_labels": "TODO",
-	"ontology.invalid_name": "El nom de l'etiqueta no és vàlid",
-	"ontology.label_naming_constraint": "No s'accepten claus",
-	"ontology.manage_labels": "Creeu i ordeneu les etiquetes que formen part d'aquest conjunt d'etiquetes.",
-	"ontology.ontology_name": "Nom de la família d'etiquetes",
-	"ontology.paragraphs": "Paràgrafs",
-	"ontology.resources": "Recursos",
-	"ontology.sentences": "Frases",
-	"ontology.sort_alphabetically": "Ordenar Alfabèticament",
-	"ontology.tags_to_label_button": "Crea etiquetes de les carpetes",
-	"ontology.type_classification": "Tipus de classificació",
-	"ontology.type_classification_important": "Atenció! Opció irreversible. No es podrà modificar un cop guardat.",
-	"ontology.type_classification_subtitle": "Tria què es pot classificar amb aquesta familia d'etiquetes.",
-	"ontology.type_labels": "Tipus de etiquetes",
-	"ontology.type_labels_subtitle": "TODO",
 	"pastanaga.cancel": "Cancel·lar",
 	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Canviar contrasenya",
