--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -191,7 +191,6 @@
 	"generic.no_results_for": "No se han encontrado resultados para",
 	"generic.nuclia_db": "Nuclia DB",
 	"generic.of": "de",
-	"generic.ontologies": "Etiquetas",
 	"generic.or": "O",
 	"generic.origin": "Origen",
 	"generic.owner": "Owner",
@@ -237,6 +236,27 @@
 	"generic.zone": "Zona de procesamiento",
 	"generic.zone_and_provider": "Zona y proveedor de procesamiento",
 	"input.placeholder": "Tu búsqueda",
+	"label-set.add": "Agregar conjunto de etiquetas",
+	"label-set.add-button": "Añadir nuevo",
+	"label-set.delete": "Eliminar conjunto de etiquetas",
+	"label-set.delete.confirm-description": "Al eliminar el conjunto de etiquetas, también se eliminarán todas sus etiquetas. No puede deshacer esta acción. También podría afectar las capacitaciones en curso y las sugerencias generadas.",
+	"label-set.delete.confirm-title": "¿Está seguro de que desea eliminar el conjunto de etiquetas \"{{labelset}}\"?",
+	"label-set.edit": "Editar conjunto de etiquetas",
+	"label-set.form.exclusive": "Etiqueta exclusiva",
+	"label-set.form.exclusive-checkbox": "Agregar solo una etiqueta por conjunto de etiquetas",
+	"label-set.form.exclusive-description": "Por defecto, un recurso/párrafo puede tener varias etiquetas de un mismo conjunto de etiquetas.",
+	"label-set.form.kind": "Tipo de clasificación",
+	"label-set.form.kind-warning": "Esta propiedad no se puede modificar posteriormente.",
+	"label-set.form.labels": "Etiquetas",
+	"label-set.form.labels-description": "Cree y ordene las etiquetas que forman parte de este conjunto de etiquetas.",
+	"label-set.form.labels.naming-constraint": "No se permiten corchetes",
+	"label-set.form.name": "Nombre del conjunto de etiquetas",
+	"label-set.form.name-invalid": "Nombre de conjunto de etiquetas no válido",
+	"label-set.form.name-required": "El nombre del conjunto de etiquetas es obligatorio",
+	"label-set.paragraphs": "Párrafos",
+	"label-set.resources": "Recursos",
+	"label-set.subtitle": "Examinar y editar conjuntos de etiquetas",
+	"label-set.title": "Conjuntos de etiquetas",
 	"language.ca": "Catalán",
 	"language.cs": "Checo",
 	"language.da": "Danés",
@@ -373,27 +393,6 @@
 	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
 	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
-	"ontology.add_ontology": "Añadir etiquetas",
-	"ontology.customize_classification": "Personaliza la clasificación.",
-	"ontology.delete_confirm_title": "¿Eliminar clasificación?",
-	"ontology.delete_warning": "Si eliminas esta família de etiquetas perderás toda la clasificación existente",
-	"ontology.delete_warning_extra": "Si eliminas esta clasificación desaparecerá de todos los recursos y sugerencias de búsqueda",
-	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre \"{{title}}\"",
-	"ontology.excluding_labels": "TODO",
-	"ontology.invalid_name": "El nombre de la etiqueta no es válido",
-	"ontology.label_naming_constraint": "No se aceptan llaves",
-	"ontology.manage_labels": "Cree y ordene las etiquetas que forman parte de este conjunto de etiquetas.",
-	"ontology.ontology_name": "Nombre de la família de etiquetas",
-	"ontology.paragraphs": "Párrafos",
-	"ontology.resources": "Recursos",
-	"ontology.sentences": "Frases",
-	"ontology.sort_alphabetically": "Ordenar Alfabéticamente",
-	"ontology.tags_to_label_button": "Crea etiquetas de las carpetas",
-	"ontology.type_classification": "Tipo de clasificación",
-	"ontology.type_classification_important": "!Atención! Opción irreversible. No se podrá modificar una vez guardado.",
-	"ontology.type_classification_subtitle": "Escoge qué puede ser clasificado con esta familia de etiquetas.",
-	"ontology.type_labels": "Tipo de etiquetas",
-	"ontology.type_labels_subtitle": "TODO",
 	"pastanaga.cancel": "Cancelar",
 	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Cambiar contraseña",
