--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -231,7 +231,6 @@
 	"generic.no_results_for": "No results found for",
 	"generic.nuclia_db": "Nuclia DB",
 	"generic.of": "of",
-	"generic.ontologies": "Label sets",
 	"generic.or": "Or",
 	"generic.origin": "Origin",
 	"generic.owner": "Owner",
@@ -278,6 +277,27 @@
 	"generic.zone": "Processing zone",
 	"generic.zone_and_provider": "Provider and processing zone",
 	"input.placeholder": "Search",
+	"label-set.add": "Add label set",
+	"label-set.add-button": "Add new",
+	"label-set.delete": "Delete label set",
+	"label-set.delete.confirm-description": "Deleting the label set will also delete all its labels. You cannot undo this action. It might also affect ongoing trainings and generated suggestions.",
+	"label-set.delete.confirm-title": "Are you sure you want to delete \"{{labelset}}\" label set?",
+	"label-set.edit": "Edit label set",
+	"label-set.form.exclusive": "Exclusive label",
+	"label-set.form.exclusive-checkbox": "Add only one label by label set",
+	"label-set.form.exclusive-description": "By default, a resource/paragraph can have several labels from a same label set.",
+	"label-set.form.kind": "Classification type",
+	"label-set.form.kind-warning": "This property cannot be modified afterward.",
+	"label-set.form.labels": "Labels",
+	"label-set.form.labels-description": "Create and sort the labels that are part of this label set.",
+	"label-set.form.labels.naming-constraint": "Curly brackets not allowed",
+	"label-set.form.name": "Label set name",
+	"label-set.form.name-invalid": "Invalid label set name",
+	"label-set.form.name-required": "Label set name is required",
+	"label-set.paragraphs": "Paragraphs",
+	"label-set.resources": "Resources",
+	"label-set.subtitle": "Browse and edit label sets",
+	"label-set.title": "Label sets",
 	"language.ca": "Catalan",
 	"language.cs": "Czech",
 	"language.da": "Danish",
@@ -415,28 +435,6 @@
 	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.title": "👋​ Welcome to Nuclia!",
 	"onboarding.updates": "Get occasional updates about Nuclia",
-	"ontology.add_ontology": "Add label set",
-	"ontology.customize_classification": "Customize the classification.",
-	"ontology.delete_confirm_title": "Delete classification?",
-	"ontology.delete_warning": "Deleting this label set will discard all existing classifications",
-	"ontology.delete_warning_extra": "If you delete this classification, it will disappear from all resources and search suggestions",
-	"ontology.duplicated_label": "A label named \"{{title}}\" already exists",
-	"ontology.excluding_labels": "Excluding labels",
-	"ontology.invalid_name": "Invalid label name",
-	"ontology.label_classification": "Label classification",
-	"ontology.label_naming_constraint": "Curly brackets not allowed",
-	"ontology.manage_labels": "Create and sort the labels that are part of this Label Set.",
-	"ontology.ontology_name": "Label set name",
-	"ontology.paragraphs": "Paragraphs",
-	"ontology.resources": "Resources",
-	"ontology.sentences": "Sentences",
-	"ontology.sort_alphabetically": "Sort Alphabetically",
-	"ontology.tags_to_label_button": "Create tags from folders",
-	"ontology.type_classification": "Type of classification",
-	"ontology.type_classification_important": "Warning! Irreversible option. It cannot be modified later.",
-	"ontology.type_classification_subtitle": "Define what this label set can classify.",
-	"ontology.type_labels": "Type of labels",
-	"ontology.type_labels_subtitle": "If you allow the excluding option, you can only choose one of the set options and automatically excluding the rest. ",
 	"pastanaga.cancel": "Cancel",
 	"pastanaga.confirm": "Confirm",
 	"profile.change_password": "Reset password",
