[sc-3249] Support labels in resource import

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -681,14 +681,16 @@
 	"training.training": "Entrenament",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
-	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 3 columnes: <code>Títol, Cos, Format</code>",
-	"upload.csv_format": "en que la columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 4 columnes: <code>Títol, Cos, Format, Etiquetes</code>",
+	"upload.csv_format": "La columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_labels": "La columna <code>Etiquetes</code>segueix aquest patró:\n<code>labelset1/label1|labelset2/label2...</code>",
 	"upload.duplicated": "Fitxer duplicat",
 	"upload.error": "Error desconegut",
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
 	"upload.invalid_csv": "L'arxiu CSV no és vàlid",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
+	"upload.labels_number": "{{num}} etiquetes",
 	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
 	"upload.select_csv": "Seleccionar CSV",
