--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -751,14 +751,16 @@
 	"training.training": "Training",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
-	"upload.csv_description": "Create multiple resources by selecting a CSV file with 3 columns: <code>Title, Body, Format</code>",
-	"upload.csv_format": "where <code>Format</code> column must be one of theses values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_description": "Create multiple resources by selecting a CSV file with 4 columns: <code>Title, Body, Format, Labels</code>",
+	"upload.csv_format": "<code>Format</code> column must be one of theses values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_labels": "<code>Labels</code> column follows this pattern:\n<code>labelset1/label1|labelset2/label2...</code>",
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
 	"upload.invalid_csv": "Invalid CSV file",
 	"upload.invalid_image": "Selected file is not a valid image",
+	"upload.labels_number": "{{num}} labels",
 	"upload.link": "Add links",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
 	"upload.progress.conflicts": "Conflicts",
