--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -681,14 +681,16 @@
 	"training.training": "Entrenamiento",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
-	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 3 columnas: <code>Título, Cuerpo, Formato</code>",
-	"upload.csv_format": "en que la columna <code>Formato</code> puede ser uno de estos valores:\n<code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 4 columnas: <code>Título, Cuerpo, Formato, Etiquetas</code>",
+	"upload.csv_format": "La columna <code>Formato</code> puede ser uno de estos valores: <code>PLAIN / MARKDOWN / HTML / RST</code>",
+	"upload.csv_labels": "La columna <code>Etiquetas</code>sigue este patrón:\n<code>labelset1/label1|labelset2/label2...</code>",
 	"upload.duplicated": "Fichero duplicado",
 	"upload.error": "Error desconocido",
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
 	"upload.invalid_csv": "El archivo CSV no es válido",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
+	"upload.labels_number": "{{num}} etiquetas",
 	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
 	"upload.select_csv": "Seleccionar CSV",
